gcc-14.2.0/gcc/testsuite/gdc.test/compilable/test19778.d
version https://git-lfs.github.com/spec/v1
oid sha256:f27d6351ff21fe5978bbc7325e52463542d2dfc042c4914956be574e9ef758c5
size 76
